[package]
name = "mimc"
version = "0.0.3"
edition = "2018"
license = "GPL-3.0"

[dependencies]
ff = {package="ff_ce" , version="0.11", features = ["derive"]}
rand = "0.4"
num = "0.2.0"
num-bigint = "0.2.2"
tiny-keccak = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_mimc_hash"
harness = false
