[package]
name = "rescue"
version = "0.4.0"
edition = "2018"

[dependencies]
franklin_crypto = {package = "franklin-crypto", features = ["plonk"], git = "https://github.com/matter-labs/franklin-crypto", branch = "dev"}
num-bigint = "0.3"
num-integer = "0.1"
num-iter = "0.1"
rand = "0.4"
byteorder = "1"
num-traits = "0.2"
sha3 = "0.9.1"
serde = {version = "1", features = ["derive"]}


[dev-dependencies]
hex = "0.4"
